# Luna

./: .env.template  .gitignore  LICENSE  README.md  assistant.py  config.json  config.py  docker-compose.yml  inspect_gui.py  known_projects.json  pyproject.toml  requirements.txt  setup.ps1  setup.sh
backend/: app.py  debug_vault.py  general_functions.py  knowledge_base_service.py  output.json  project_service.py  project_utils.py  rag_chroma.py  vault_service.py  vault_utils.py  web_search_service.py
frontend/: package-lock.json  package.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.jsx  App.tsx  AppContext.tsx  api.js  api.ts  index.css  types.ts
frontend/src/components/: ChatInterface.jsx  ChatInterface.tsx  DraftingBoard.jsx  DraftingBoard.tsx  MoodDisplay.jsx  MoodDisplay.tsx  ProjectManager.jsx  ProjectManager.tsx  VaultExplorer.jsx  VaultExplorer.tsx
saved_projects/: Arkeia.json
tests/: conftest.py  test_api.py  test_sentiment.py  test_services.py
