[project]
name = "writerassistant"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "pygame>=2.6.1",
    "pygame-gui>=0.6.14",
    "torch>=2.8.0",
    "transformers>=4.57.0",
    "python-dotenv",
    "pytest",
    "pytest-asyncio",
    "fastapi>=0.115.0",
    "uvicorn>=0.31.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.12",
    "ddgs>=9.10.0",
    "chromadb>=1.4.0",
    "grpcio>=1.76.0",
]
